guadalinex-eadmin (v5-0.1) hardy; urgency=low

  * Initial gv5 release 
  * Fixed new version of opensc-ceres and opensc-dnie as dependences
  * Diverted opensc-ceres/dnie postinstall scripts to avoid web browser calls
  * Some source-package fixes
  * Replacement of opensc package by our own bug-fixing NMU package
  * Removed old libccid_Info.plist.gv4; libccid provides better plist now
  * Moved to new libnss3-1d as dependence
  * Marked firefox-3.0 as mandatory browser as dependence
  * Updated new jss33.jar library

 -- J. Félix Ontañón <fontanon@emergya.es>  Fri, 9 Apr 2008 14:41:11 +0100

guadalinex-eadmin (r1760-0.1) edgy; urgency=low

  * Non-maintainer upload
  * Added support for Siemens smartcards and multiple cards at same time
  * Added python dependence 
  * Source-Package not builded with gcs

 -- J. Félix Ontañón <fontanon@emergya.es>  Fri, 21 Dec 2007 08:51:03 +0200

guadalinex-eadmin (r1760) edgy; urgency=low

  * Added libnss3-0d and libnss3-tools dependencies
  * Initial release

 -- Lorenzo Gil Sanchez <lgs@yaco.es>  Mon, 15 Oct 2007 08:55:47 +0200